proj/src/main/webapp/chat.css
/* container with all child divs aligned horizontally in the center*/
body {
    background-color: #333333;
    font-family: 'Montserrat', sans-serif !important;
}

/* right chat */
/* title */
h1 {
  font-weight: bold;
  text-align: center;
  color: #D1B280;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

 /* bootstrap title class */ 
.display-4 {
    font-size: 5rem;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: .15rem;
}

/* chat space */
.card {
    border-radius: 50px;
    padding: 0 0 20px 0;
    height: 96vh;
}

.center-h {
    display: flex;
    justify-content: center;
    margin: 10px;
}

#body-row {
    margin-left: 0;
    margin-right: 0;
    overflow: hidden;
}

#sidebar-container {
    min-height: 100vh;
    background-color: white;
    padding: 0;
}

/* sidebar sizes when expanded and expanded */
.sidebar-expanded {
    width: 350px;
}

.sidebar-collapsed {
    width: 60px;
}

ul {
    list-style-type: none;
    padding: 0;
}

/* profile pictures*/
#image-cropper {
    width: 150px;
    height: 150px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
}

#user-pfp {
    margin: 0 auto;
    height: 100%;
    width: auto;
}

/* Menu item*/
#sidebar-container .list-group a {
    height: 50px;
    color: white;
}

/* Submenu item*/
#sidebar-container .list-group .sidebar-submenu a {
    height: 45px;
    padding-left: 30px;
}

.sidebar-submenu {
    font-size: 0.9rem;
}


/* infinte scroll */
.scroll {
    overflow: scroll;
    height:100vh;
}

/* chat preview */
.message pre, .message p{
    font-family: 'Montserrat', sans-serif;
}


/* separators */
.sidebar-separator-title {
    background-color: white;
    height: auto;
    margin-bottom: -15px;
}

.info-section {
    /*border: 0;*/
    text-align: center;
    vertical-align: middle;
    /*line-height: 90px;*/
}

.sidebar-separator {
    background-color: white;
    border-top: 1px solid rgba(0,0,0,.125);
    height: 75px;
    border: 0;
}


/* Closed submenu icon */
#sidebar-container .list-group .list-group-item[aria-expanded="false"] .submenu-icon::after {
    content: " \f0d7";
    font-family: FontAwesome;
    display: inline;
    text-align: right;
    padding-left: 10px;
}

/* Opened submenu icon */
#sidebar-container .list-group .list-group-item[aria-expanded="true"] .submenu-icon::after {
    content: " \f0da";
    font-family: FontAwesome;
    display: inline;
    text-align: right;
    padding-left: 10px;
}

a:hover {
    background: #D1B280 !important;
}

/* left bottom anchor*/

.sidebar {
    position: relative;
}

.bottom {
    width: inherit;
    position: fixed;
    bottom: 0;
}

/* using important tags to override bootstrap presets*/

.bg-gold {
    background: #D1B280 !important;
}

.bg-grey {
    background: #f7f7f7 !important;
    color: black !important;
}

.p-4{
    max-height:100vh;
}

/* main chat*/
.col-1 {
    justify-content: center;
    align-content: center;
    text-align: center;
}

#main-chat .message {
    border-bottom: 2px #D1B280 dotted;
}

/* profile pictures for messages*/
#image-cropper-pfp {
    width: 50px;
    height: 50px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    margin: 12px auto 0px auto;
}

img {
    height: 100%
}

#main-chat {
    height: 100%;
}

#chat-name {
    margin-bottom: 0px;
}

#message-list {
    max-height: 80%;
    overflow: scroll;
    display: flex;
    flex-direction: column-reverse;
}

.text-muted {
    font-size: .8rem;
}

.card-body li {
    border: 0;
}

/*input box*/
#input-section {
    position: absolute;
    bottom: 0;
    width: 100%;
}

@media only screen 
    and (min-width: 760px) 
    and (max-width: 250px) {
    #sidebar-container {
        width: 250px;
    }
}

